// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Swiper.Menu checkGrammar 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkGrammar 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkGrammar 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkGrammar 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkHighlight 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu checkSpaces 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu className 1`] = `
<div
  className="uu5-bricks-swiper-menu my-classname uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu content 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Swiper.Menu content 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu content 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu content 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Swiper.Menu controlled 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu controlled 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu controlled 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu controlled 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu default props 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-disabled uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu disabled 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu disabled 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-disabled uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Menu docKit examples UU5.Bricks.Swiper.Menu example01 1`] = `
<div
  className="uu5-bricks-swiper"
  id="uuID"
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "backgroundColor": "lightblue",
      "minHeight": "200px",
      "width": "100%",
    }
  }
  title={null}
>
  <swiper-menu
    _open={false}
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="idA"
    ignoreInnerHTML={false}
    key="idA"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pullRight={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={
      Object {
        "backgroundColor": "lightgrey",
      }
    }
    tooltip={null}
  >
    <Button
      baseline={false}
      bgStyle="filled"
      borderRadius={null}
      className={null}
      colorSchema={null}
      content="Close"
      controlled={true}
      disabled={false}
      displayBlock={false}
      dynamic={false}
      elevation={null}
      elevationHover={null}
      hidden={false}
      href={null}
      id="idB"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      offset={0}
      onClick={[Function]}
      pressed={false}
      pureRender={false}
      ref_={null}
      selected={false}
      size="m"
      smoothScroll={1000}
      style={null}
      target="_self"
      tooltip={null}
    />
  </swiper-menu>
  <swiper-body
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID2"
    ignoreInnerHTML={false}
    key="uuID2"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    <P
      className="center"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID3"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      On touch screen you can open menus by swipe on blue area. If you dont have touchscreen, turn on console(chrome - F12) and switch to mobile device view by pressing icon at top left corner of the console or by pressing ctrl+shift+M.
    </P>
  </swiper-body>
</div>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu dynamic 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-hidden uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu hidden 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-hidden uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu id 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu ignoreHTML 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu mainAttrs 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu name 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 5`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 6`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 7`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 8`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 9`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 10`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 11`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 12`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 13`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 14`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 15`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 16`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 17`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 18`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Swiper.Menu nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Swiper.Menu noIndex 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-noindex uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noIndex 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noIndex 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu noIndex 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-noindex uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pullRight 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu pureRender 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-selected uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu selected 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-common-selected uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu style 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector 2`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector 3`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu textCorrector 4`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Menu tooltip 1`] = `
<div
  className="uu5-bricks-swiper-menu uu5-bricks-swiper-menu-left"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
